--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,23 @@ header{
     background-image: url(../img/pattern.png);
     background-color: cornflowerblue;
     background-repeat: repeat;
-    width: 400px;
-    
+    height: 100px;
+    margin-top: 0px;
+}
+.logo{
+    width: 200px;
+}
+h1{
+    margin-bottom: 10px;
+}
+.autore{
+    color: cyan;
+}
+.tim{
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+dfn{
+    background-color: yellow;
+    ;
 }
