--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,121 @@
 /*Generico*/
+body{
+    margin: 0;
+    padding: 0;
+}
+
 .container{
-    width: 1180px;
+    width: 80%;
     margin: 0 auto;
-    background-color: #fff;
 }
+
+.font-small{
+    font-size: 13px;
+}
+
+.w-50{
+    width: 50%;
+}
+
+.w-25{
+    width: 25%;
+}
+
 /*immagine di sfondo dell'intestazione*/
-header{
-    background-color: aqua;
+.main-menu{
+    background-color: rgb(8, 159, 246);
     background-image: url(../img/pattern.png);
-    height: 180px;
+    height: 100px;
+    background-size: 30%;
 }
+
+#logo{
+    height: 50px;
+    margin-top: 40px;
+    padding: 0;
+}
+
 /*Titolo e Autore dell'articolo*/
 h1{
+    font-size: 38px;
     margin-bottom: 0px;
 }
+
 address{
     font-style: normal;
+    font-size: 18px;
+    color: rgb(128, 125, 125);
 }
-.autore{
+
+.author-name{
     color: rgb(10, 163, 235);
-    margin-left: 0px;
 }
-.data-pubblicazione{
-    font-size: 15px;
+
+.pubdate{
+    color: rgb(128, 125, 125);
     font-style: normal;
 }
+
 /*immagine dell'autore con didascalia*/
 .autore-immagini{
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-left: 0;
 }
+
+
 /*Punti salienti*/
 .punti-salienti{
-    padding-inline-start: 10px;
+    list-style-position: inside;
+    padding-inline-start: 0;
 }
-/*Tabella*/
-table{
-    border-spacing: 0px;
-}
-th{
-    background-color:rgb(10, 163, 235);
-    text-align: left;
-    width: 200px;
-}
-.compresi{
-    background-color: aqua;
-}
-/*siti aggiuntivi*/
-h4{
-    color: grey;
-}
-b{
-    margin-left: 20px;
 
+/*Tabella*/
+thead{
+    color: #ffff;
+    background-color: #20a9e5;
 }
-.monitor{
+table{
+    border-collapse: collapse;
+}
+
+.odd{
+    background-color: rgb(128, 204, 240);
+}
+
+th{
+    text-align: left;
+}
+
+/*siti aggiuntivi*/
+h3{
+    color: grey;
+    font-size: 15px;
+}
+
+
+#monitor{
     background-image: url(../img/monitor.jpg);
-    color: white;
-    width: 275px;
-    height: 200px;
 }
-.grafico{
+
+#graph{
     background-image: url(../img/graph.jpg);
+}
+
+.related-image{
     color: white;
     width: 275px;
     height: 200px;
+    font-weight: 600;
+    font-size: 18px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+h4{
+    padding-left: 10px;
+    padding-top: 20px;
+}
+
+footer{
+    margin-bottom: 20px;
 }
